showed the experience and its design

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,27 @@
 <app-header></app-header>
+
+<section id="home" class="pt-20">
+  <app-home></app-home>
+</section>
+
+<section id="profile" class="pt-20">
+  <app-profile></app-profile>
+</section>
+
+<section id="skills" class="pt-20">
+  <app-skills></app-skills>
+</section>
+
+<section id="portfolio" class="pt-20">
+  <app-portfolio></app-portfolio>
+</section>
+
+<section id="why-me" class="pt-20">
+  <app-why-me></app-why-me>
+</section>
+
+<section id="contact" class="pt-20">
+  <app-contact></app-contact>
+</section>
+
 <router-outlet></router-outlet>
