--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,16 @@
 /* You can add global styles to this file, and also import other style files */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
 body{
   margin: 0;
   padding: 0;
 }
+
+/* Regular CSS for active link */
+.nav-links a.active {
+  color: yellow!important; /* Change to your desired active link color */
+}
+
