--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,7 +6,7 @@
     <div class="nav-links hidden md:flex items-center space-x-6">
       <a *ngFor="let data of menu" [routerLink]="data.link" (click)="scrollTo(data.link)"
          [class.active]="isActive(data.link) || activeSection === data.menu.toLowerCase()"
-         class="text-gray-600 hover:text-gray-800 transition duration-300">
+         class="nav-link text-gray-600 hover:text-gray-800 transition duration-300">
         {{ data.menu }}
       </a>
     </div>
@@ -27,7 +27,7 @@
     <div class="flex flex-col items-center mt-20">
       <a *ngFor="let data of menu" [routerLink]="data.link" (click)="scrollTo(data.link)"
          [class.active]="isActive(data.link) || activeSection === data.menu.toLowerCase()"
-         class="text-gray-600 hover:text-gray-800 transition duration-300 py-4">
+         class="nav-link text-gray-600 hover:text-gray-800 transition duration-300 py-4">
         {{ data.menu }}
       </a>
     </div>
