--- a/src/styles.css
+++ b/src/styles.css
@@ -11,6 +11,26 @@ body{
 
 /* Regular CSS for active link */
 .nav-links a.active {
-  color: yellow!important; /* Change to your desired active link color */
+  color: yellow; /* Change to your desired active link color */
 }
+
+@keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+.animated-gradient {
+  background: linear-gradient(270deg, #833ab4, #fd1d1d, #fcb045);
+  background-size: 200% 200%;
+  animation: gradient 10s ease infinite;
+}
+
+
 
