--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
 
 body{
   margin: 0;
@@ -13,4 +9,13 @@ body{
 .nav-links a.active {
   color: yellow!important; /* Change to your desired active link color */
 }
+
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
