--- a/src/app/readme/readme.component.html
+++ b/src/app/readme/readme.component.html
@@ -1,6 +1,6 @@
 <h2 mat-dialog-title>Install Angular</h2>
 <mat-dialog-content class="mat-typography">
-  <h3>Develop across all platforms</h3>
+  <!-- <h3>Develop across all platforms</h3>
   <p>Learn one way to build applications with Angular and reuse your code and abilities to build
     apps for any deployment target. For web, mobile web, native mobile and native desktop.</p>
 
@@ -56,7 +56,8 @@
 
   <p>An app's components typically define many views, arranged hierarchically. Angular provides
   the Router service to help you define navigation paths among views. The router provides
-  sophisticated in-browser navigational capabilities.</p>
+  sophisticated in-browser navigational capabilities.</p> -->
+<markdown [src]="data.src" katex></markdown>
 </mat-dialog-content>
 <mat-dialog-actions align="end">
   <button mat-button mat-dialog-close>Cancel</button>
