SAving temporary changes

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -29,3 +29,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.mat-mdc-dialog-surface{
+  position: static!important
+}
