--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -1,2 +1,4 @@
 <p>skills works!</p>
 <button (click)="openDialog()" class="bg-green-500 rounded-lg p-2">Open Dialog</button>
+
+<skill-card [src]="'https://user-images.githubusercontent.com/25181517/117201156-9a724800-adec-11eb-9a9d-3cd0f67da4bc.png'" [alt]="'alternate text'"></skill-card>
