--- a/src/app/skill-card/skill-card.component.html
+++ b/src/app/skill-card/skill-card.component.html
@@ -1,3 +1,10 @@
 <div class="flex flex-col">
-    <img [src]="getSrc()" [alt]="getAlt()" [height]="getHeight()" [width]="getWidth()"/>
+    <img [src]="getSrc()" [alt]="getAlt()" [height]="getHeight()" [width]="getWidth()">
+
+    <div class="grid grid-flow-row grid-cols-4 w-16 mt-1" justify-evenly>
+      <div class="h-2 w-4" [ngClass]="{ 'bg-green-300': level >= 1}"></div>
+      <div class="h-2 w-4" [ngClass]="{ 'bg-green-500': level >= 2}"></div>
+      <div class="h-2 w-4" [ngClass]="{ 'bg-green-700': level >= 3}"></div>
+      <div class="h-2 w-4" [ngClass]="{'bg-green-900': level >= 4}"></div>
+    </div>
 </div>
