--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -3,10 +3,16 @@
   Open Dialog
 </button>
 
-<app-skill-card
-  [src]="
-    'https://user-images.githubusercontent.com/25181517/117201156-9a724800-adec-11eb-9a9d-3cd0f67da4bc.png'
-  "
-  [alt]="'Java Image'"
-  [level]="4"
-></app-skill-card>
+
+<h1 class="text-4xl font-bold mb-4 text-gray-800">Skills </h1>
+<div class="container mx-auto px-4 py-8">
+  <div *ngIf="skillCategories">
+    <div *ngFor="let skillTitle of getTitles()" class="text-2xl font-bold mb-2 text-gray-800">
+      {{skillTitle}}
+      <div class="flex flex-row justify-start items-baseline flex-wrap">
+        <app-skill-card *ngFor="let skill of getSkills(skillTitle)"
+        [src]="skill.src" [alt]="skill.alt" [height]="skill.height?skill.height:70" [width]="skill.width?skill.width:70" [level]="skill.level?skill.level:0" ></app-skill-card>
+      </div>
+    </div>
+  </div>
+</div>
