Added projects component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,6 +16,10 @@
   <app-portfolio></app-portfolio>
 </section>
 
+<section id="projects" class="pt-20">
+  <app-projects></app-projects>
+</section>
+
 <section id="why-me" class="pt-20">
   <app-why-me></app-why-me>
 </section>
