--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,1 +1,13 @@
-<p>projects works!</p>
+<div class="min-h-screen bg-gradient-to-b from-blue-400 to-purple-600">
+  <div class="container mx-auto px-4 py-8">
+    <div *ngIf="projects && projects.length > 0">
+      <div *ngFor="let project of projects" class="bg-white shadow-lg rounded-lg p-6">
+        <h3 class="text-2xl fond-bold mb-2"> {{project.title}}</h3>
+        <p class="text-lg"><strong>Tech Stack: </strong> {{project.tech}}</p>
+        <div *ngIf="project.readme != undefined" class="text-center">
+
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
