--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -1,14 +1,13 @@
-<p>Skills works!
+<h1 class="text-4xl font-bold mb-4 text-gray-800">Skills </h1>
+<div class="container mx-auto px-4 py-8">
+  <div *ngIf="skillCategories">
+    <div *ngFor="let skillTitle of getTitles()" class="text-2xl font-bold mb-2 text-gray-800">
+      {{skillTitle}}
+      <div class="flex flex-row justify-start items-baseline flex-wrap">
+        <app-skill-card *ngFor="let skill of getSkills(skillTitle)"
+        [src]="skill.src" [alt]="skill.alt" [height]="skill.height?skill.height:70" [width]="skill.width?skill.width:70" [level]="skill.level?skill.level:0" ></app-skill-card>
+      </div>
+    </div>
+  </div>
+</div>
 
-  Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum
-  Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum
-
-  Skills works!
-</p>
-<p>Skills works!
-
-  Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum
-  Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum
-
-  Skills works!
-</p>
