--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,4 +1,4 @@
-<div class="min-h-screen bg-gradient-to-b from-blue-400 to-purple-600">
+<div class=" bg-gradient-to-b from-blue-400 to-purple-600">
   <div class="container mx-auto px-4 py-8">
     <div *ngIf="projects && projects.length > 0">
       <div *ngFor="let project of projects" class="bg-white shadow-lg rounded-lg p-6 mb-10">
