Saving temporary changes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,28 +4,42 @@
   <app-home></app-home>
 </section>
 
+<hr class="m-4"/>
+
 <section id="profile" class="pt-20">
   <app-profile></app-profile>
 </section>
 
-<section id="skills" class="pt-20">
-  <app-skills></app-skills>
-</section>
+<hr class="m-4"/>
 
 <section id="portfolio" class="pt-20">
   <app-portfolio></app-portfolio>
 </section>
 
+<hr class="m-4"/>
+
 <section id="projects" class="pt-20">
   <app-projects></app-projects>
 </section>
+
+<hr class="m-4"/>
 
 <section id="why-me" class="pt-20">
   <app-why-me></app-why-me>
 </section>
 
+<hr class="m-4"/>
+
+<section id="skills" class="pt-20">
+  <app-skills></app-skills>
+</section>
+
+<hr class="m-4"/>
+
 <section id="contact" class="pt-20">
   <app-contact></app-contact>
 </section>
+
+<hr class="m-4"/>
 
 <router-outlet></router-outlet>
