--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,14 +1,29 @@
-<p>home works!
+<div class="container container-min-w min-w-[640px] mx-auto flex flex-col align-middle">
+  <h1 class="font-mono text-2xl self-center content-center" >
+    👋 Greetings
+  </h1>
+  <div class=" mx-auto align-top sm:flex sm:flex-col md:block">
+    <img src="../../assets/images/photo.jpg" class="sm:block md:inline-block md:float-left m-8 object-scale-down" alt="Photo" >
 
-  Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum
-  Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum
+      <div class="sm:block md:inline">
+        Hi, I'm Vishal Rana, a passionate developer with an insatiable curiousity for understanding tech systems whenever I come accross them. My obsession with technology drives me to constantly explore and experiment with innovative solutions.
+      <p>I have honed my skills through hands-on experience and continous learning. My journey in software development is fueled by a desier to deive deep into the intricacies of various tech systes, and always striving to understand how they work.</p>
+      <p>I aim to keep growing as a developer, continually seeking out new opportunities to learn and contribute.</p>
+      Hi, I'm Vishal Rana, a passionate developer with an insatiable curiousity for understanding tech systems whenever I come accross them. My obsession with technology drives me to constantly explore and experiment with innovative solutions.
+      <p>I have honed my skills through hands-on experience and continous learning. My journey in software development is fueled by a desier to deive deep into the intricacies of various tech systes, and always striving to understand how they work.</p>
+      <p>I aim to keep growing as a developer, continually seeking out new opportunities to learn and contribute.</p>
+      Hi, I'm Vishal Rana, a passionate developer with an insatiable curiousity for understanding tech systems whenever I come accross them. My obsession with technology drives me to constantly explore and experiment with innovative solutions.
+      <p>I have honed my skills through hands-on experience and continous learning. My journey in software development is fueled by a desier to deive deep into the intricacies of various tech systes, and always striving to understand how they work.</p>
+      <p>I aim to keep growing as a developer, continually seeking out new opportunities to learn and contribute.</p>
+      <p>I have honed my skills through hands-on experience and continous learning. My journey in software development is fueled by a desier to deive deep into the intricacies of various tech systes, and always striving to understand how they work.</p>
+      <p>I aim to keep growing as a developer, continually seeking out new opportunities to learn and contribute.</p>
+      Hi, I'm Vishal Rana, a passionate developer with an insatiable curiousity for understanding tech systems whenever I come accross them. My obsession with technology drives me to constantly explore and experiment with innovative solutions.
+      <p>I have honed my skills through hands-on experience and continous learning. My journey in software development is fueled by a desier to deive deep into the intricacies of various tech systes, and always striving to understand how they work.</p>
+      <p>I aim to keep growing as a developer, continually seeking out new opportunities to learn and contribute.</p>
+      Hi, I'm Vishal Rana, a passionate developer with an insatiable curiousity for understanding tech systems whenever I come accross them. My obsession with technology drives me to constantly explore and experiment with innovative solutions.
+      <p>I have honed my skills through hands-on experience and continous learning. My journey in software development is fueled by a desier to deive deep into the intricacies of various tech systes, and always striving to understand how they work.</p>
+      <p>I aim to keep growing as a developer, continually seeking out new opportunities to learn and contribute.</p>
+      </div>
+  </div>
 
-  home works!
-</p>
-<p>home works!
-
-  Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum
-  Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum
-
-  home works!
-</p>
+</div>
