--- a/src/app/why-me/why-me.component.html
+++ b/src/app/why-me/why-me.component.html
@@ -1,8 +1,33 @@
-<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+<div class="flex flex-col items-center">
+  <div class="container mx-auto">
+    <h3 class="text-2xl font-bold text-nowrap text-center">
+      Awards and Recognition
+    </h3>
+    <div *ngFor="let category of getCategories()">
+      <h5 class="text-xl font-bold text-nowrap text-center">
+        {{ category }}
+      </h5>
 
-  Why do we use it?
-  It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</p>
-  <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+      <div *ngIf="!category.toLowerCase().includes('academic')">
+        <app-award
+          *ngFor="let item of getItems(category)"
+          [icon]="item.icon"
+          [title]="item.title"
+          [date]="item.date"
+          [description]="item.description"
+          [issuedBy]="item.issuedBy"
+          [highlights]="item.highlights"
+        ></app-award>
+      </div>
 
-    Why do we use it?
-    It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</p>
+      <div *ngIf="category.toLowerCase().includes('academic')">
+        <ul
+          class="mx-4 px-4 pb-4 list-disc font-mono text-lg"
+          *ngFor="let item of getItems(category)"
+        >
+          <li>{{ item.data }}</li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</div>
