--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,12 +1,66 @@
-<div class="min-h-screen flex items-center justify-center bg-gray-100 py-12 animated-gradient">
-  <div class="max-w-3xl w-full bg-white shadow-md rounded-lg p-6 ">
+<div
+  class="container-min-w flex flex-col items-center justify-center py-12 animated-gradient"
+>
+  <div class="container mx-auto shadow-md rounded-lg p-6">
     <div class="mb-6 text-center">
       <h1 class="text-2xl font-semibold text-gray-800">Contact Me</h1>
     </div>
-    <div class="contact-form-container">
+    <div class="contact-form-container grid grid-cols-2">
+      <div class="p-6">
+        <p>
+          Thanks for visiting! Iam stocked that you would like to get in touch
+          with me.
+        </p>
+        <p>
+          As a passionate developer. I thrive on building innovative solutions
+          and exploring new technologies. Whether you have a project in mind,
+          need some advice, or just want to chat about the latest in tect, I'm
+          here and excited to connect.
+        </p>
+        <p>
+          Feel free to drop me a message using the form and I'll get back to you
+          as soon as possible. Looking forward to hearing from you.
+        </p>
+        <p>In the meantime, you can also connect me on</p>
+
+        <h6 class="text-center font-bold text-lg mt-8">Contact With Me</h6>
+        <div
+          *ngIf="emailAddress && emailAddress.length > 0"
+          class="flex flex-row justify-center align-baseline content-center items-center"
+        >
+          <img
+            src="../../assets/images/svg/email.svg"
+            height="30"
+            width="40"
+            class="mr-4"
+          />
+          {{ emailAddress }}
+        </div>
+        <div
+          class="flex flex-row align-baseline justify-center content-center"
+        >
+        <div *ngFor="let item of connectWithMeItems" class="mx-3 mt-4 mb-10">
+            <a *ngIf="item.url" [href]="item.url">
+              <img [src]="item.iconUrl" height="40" width="40" [alt]="item.title">
+            </a>
+        </div>
+      </div>
+      <h6 class="text-center font-bold">Follow Me on</h6>
+      <div
+      class="flex flex-row align-baseline justify-center content-center">
+
+      <div *ngFor="let item of followMeOnItems" class="mx-3 mb-10">
+        <a *ngIf="item.url" [href]="item.url" target="_blank">
+          <img [src]="item.iconUrl" height="40" width="40" [alt]="item.title">
+        </a>
+      </div>
+    </div>
+      </div>
       <form [formGroup]="contactForm" (ngSubmit)="submit()" class="space-y-6">
         <div>
-          <label for="name" class="block text-sm font-medium text-gray-700">Name:</label>
+          <label for="name" class="block text-sm font-medium text-gray-700"
+            >Name:</label
+          >
           <input
             id="name"
             [formControl]="contactForm.controls.name"
@@ -14,7 +68,11 @@
             class="px-5 mt-1 block w-full rounded-md border border-gray-300 shadow-sm focus:border-indigo-500 focus:ring focus:ring-indigo-200 focus:ring-opacity-50 py-3"
           />
           <div
-            *ngIf="contactForm.controls.name.invalid && (contactForm.controls.name.dirty || contactForm.controls.name.touched)"
+            *ngIf="
+              contactForm.controls.name.invalid &&
+              (contactForm.controls.name.dirty ||
+                contactForm.controls.name.touched)
+            "
             class="text-red-600 text-sm mt-1"
           >
             Name is required.
@@ -22,7 +80,9 @@
         </div>
 
         <div>
-          <label for="email" class="block text-sm font-medium text-gray-700">Email:</label>
+          <label for="email" class="block text-sm font-medium text-gray-700"
+            >Email:</label
+          >
           <input
             id="email"
             [formControl]="contactForm.controls.email"
@@ -30,7 +90,11 @@
             class="px-5 mt-1 block w-full rounded-md border border-gray-300 shadow-sm focus:border-indigo-500 focus:ring focus:ring-indigo-200 focus:ring-opacity-50 py-3"
           />
           <div
-            *ngIf="contactForm.controls.email.invalid && (contactForm.controls.email.dirty || contactForm.controls.email.touched)"
+            *ngIf="
+              contactForm.controls.email.invalid &&
+              (contactForm.controls.email.dirty ||
+                contactForm.controls.email.touched)
+            "
             class="text-red-600 text-sm mt-1"
           >
             Email is required.
@@ -38,7 +102,9 @@
         </div>
 
         <div>
-          <label for="subject" class="block text-sm font-medium text-gray-700">Subject:</label>
+          <label for="subject" class="block text-sm font-medium text-gray-700"
+            >Subject:</label
+          >
           <input
             id="subject"
             [formControl]="contactForm.controls.subject"
@@ -52,15 +118,22 @@
         </div>
 
         <div>
-          <label for="message" class="block text-sm font-medium text-gray-700">Message:</label>
+          <label for="message" class="block text-sm font-medium text-gray-700"
+            >Message:</label
+          >
           <textarea
             id="message"
             [formControl]="contactForm.controls.message"
             placeholder="Type your message here."
+            rows="7"
             class="px-5 mt-1 block w-full rounded-md border border-gray-300 shadow-sm focus:border-indigo-500 focus:ring focus:ring-indigo-200 focus:ring-opacity-50 py-3"
           ></textarea>
           <div
-            *ngIf="contactForm.controls.message.invalid && (contactForm.controls.message.dirty || contactForm.controls.message.touched)"
+            *ngIf="
+              contactForm.controls.message.invalid &&
+              (contactForm.controls.message.dirty ||
+                contactForm.controls.message.touched)
+            "
             class="text-red-600 text-sm mt-1"
           >
             Please provide a meaningful message.
