--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -5,8 +5,8 @@
     <div class="mb-6 text-center">
       <h1 class="text-2xl font-semibold text-gray-800">Contact Me</h1>
     </div>
-    <div class="contact-form-container grid grid-cols-2">
-      <div class="p-6">
+    <div class="contact-form-container sm:grid md:grid-cols-2 sm:grid-cols-1 ">
+      <div class="p-6 sm:order-2 md:order-1">
         <p>
           Thanks for visiting! Iam stocked that you would like to get in touch
           with me.
@@ -36,27 +36,33 @@
           />
           {{ emailAddress }}
         </div>
-        <div
-          class="flex flex-row align-baseline justify-center content-center"
-        >
-        <div *ngFor="let item of connectWithMeItems" class="mx-3 mt-4 mb-10">
+        <div class="flex flex-row align-baseline justify-center content-center">
+          <div *ngFor="let item of connectWithMeItems" class="mx-3 mt-4 mb-10">
             <a *ngIf="item.url" [href]="item.url">
-              <img [src]="item.iconUrl" height="40" width="40" [alt]="item.title">
+              <img
+                [src]="item.iconUrl"
+                height="40"
+                width="40"
+                [alt]="item.title"
+              />
             </a>
+          </div>
+        </div>
+        <h6 class="text-center font-bold">Follow Me on</h6>
+        <div class="flex flex-row align-baseline justify-center content-center">
+          <div *ngFor="let item of followMeOnItems" class="mx-3 mb-10">
+            <a *ngIf="item.url" [href]="item.url" target="_blank">
+              <img
+                [src]="item.iconUrl"
+                height="40"
+                width="40"
+                [alt]="item.title"
+              />
+            </a>
+          </div>
         </div>
       </div>
-      <h6 class="text-center font-bold">Follow Me on</h6>
-      <div
-      class="flex flex-row align-baseline justify-center content-center">
-
-      <div *ngFor="let item of followMeOnItems" class="mx-3 mb-10">
-        <a *ngIf="item.url" [href]="item.url" target="_blank">
-          <img [src]="item.iconUrl" height="40" width="40" [alt]="item.title">
-        </a>
-      </div>
-    </div>
-      </div>
-      <form [formGroup]="contactForm" (ngSubmit)="submit()" class="space-y-6">
+      <form [formGroup]="contactForm" (ngSubmit)="submit()" class="space-y-6 sm:order-1 md:order-2">
         <div>
           <label for="name" class="block text-sm font-medium text-gray-700"
             >Name:</label
