--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -5,7 +5,7 @@
     <div class="mb-6 text-center">
       <h1 class="text-2xl font-semibold text-gray-800">Contact Me</h1>
     </div>
-    <div class="contact-form-container sm:grid md:grid-cols-2 sm:grid-cols-1 ">
+    <div class="contact-form-container sm:grid md:grid-cols-2 sm:grid-cols-1">
       <div class="p-6 sm:order-2 md:order-1">
         <p>
           Thanks for visiting! Iam stocked that you would like to get in touch
@@ -62,7 +62,11 @@
           </div>
         </div>
       </div>
-      <form [formGroup]="contactForm" (ngSubmit)="submit()" class="space-y-6 sm:order-1 md:order-2">
+      <form
+        [formGroup]="contactForm"
+        (ngSubmit)="submit()"
+        class="space-y-6 sm:order-1 md:order-2 relative"
+      >
         <div>
           <label for="name" class="block text-sm font-medium text-gray-700"
             >Name:</label
@@ -149,11 +153,17 @@
         <div class="text-center">
           <button
             type="submit"
-            [disabled]="contactForm.invalid"
+            [disabled]="contactForm.invalid || isLoading || isSafeDisabled"
             class="inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 disabled:opacity-50"
           >
             Submit
           </button>
+        </div>
+        <div
+          *ngIf="isLoading"
+          class="absolute grid grid-col-1 top-0 left-0 min-w-full min-h-full justify-center content-center z-10 opacity-30"
+        >
+          <mat-spinner></mat-spinner>
         </div>
       </form>
     </div>
