--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -5,8 +5,8 @@
     <div class="mb-6 text-center">
       <h1 class="text-2xl font-semibold text-gray-800">Contact Me</h1>
     </div>
-    <div class="contact-form-container sm:grid md:grid-cols-2 sm:grid-cols-1">
-      <div class="p-6 sm:order-2 md:order-1">
+    <div class="contact-form-container sm:grid lg:grid-cols-2 sm:grid-cols-1">
+      <div class="p-6 sm:order-2 lg:order-1">
         <p>
           Thanks for visiting! Iam stocked that you would like to get in touch
           with me.
@@ -65,7 +65,7 @@
       <form
         [formGroup]="contactForm"
         (ngSubmit)="submit()"
-        class="space-y-6 sm:order-1 md:order-2 relative"
+        class="space-y-6 sm:order-1 lg:order-2 relative"
       >
         <div>
           <label for="name" class="block text-sm font-medium text-gray-700"
