Saving Education temporary changes

--- a/src/app/education/education.component.html
+++ b/src/app/education/education.component.html
@@ -1,1 +1,20 @@
 <p> Education Works!</p>
+<div class="container flex flex-col items-center" >
+  <div class="a-education min-w-[640px] border-blue-400 border-solid border-2 flex flex-row flex-nowrap">
+    <div class="education-decorater">
+      <div class="education-decorater w-[32px] h-[100px] bg-green-100">
+        <div class="circle"></div>
+        <div class="rectangle"></div>
+      </div>
+    </div>
+    <div class="education-details flex flex-row items-start">
+      <div class="bg-green-400 w-[100px] h-[100px]">
+
+      </div>
+      <div class="bg-green-800 w-[800px] h-[100px]">
+
+      </div>
+    </div>
+  </div>
+
+</div>
