Fixed few UI rendering issues

--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -26,6 +26,11 @@
   font-weight: bold;
 }
 
+.nav-link.active-mobile{
+  color : blue!important;
+
+}
+
 .nav-links a {
   color: #fff;
   text-decoration: none;
