--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,5 +1,5 @@
 <div
-  class="container min-w-[640px] flex flex-col mx-auto align-middle py-12 animated-gradient"
+  class="min-w-[640px] flex flex-col mx-auto align-middle py-12 animated-gradient"
 >
   <div class="container mx-auto shadow-md rounded-lg p-6">
     <div class="mb-6 text-center">
