--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar bg-white shadow-lg fixed top-0 w-full z-50">
+<nav class="navbar min-w-full bg-white shadow-lg fixed top-0 w-full z-50">
   <div class="container mx-auto flex justify-between items-center py-4 px-6">
     <div class="logo text-xl font-bold">Vishal Rana</div>
 
@@ -37,7 +37,7 @@
         *ngFor="let data of menu"
         [routerLink]="data.link"
         (click)="scrollTo(data.link)"
-        [class.active]="
+        [class.active-mobile]="
           isActive(data.link) || activeSection === data.menu.toLowerCase()
         "
         class="nav-link text-gray-600 hover:text-gray-800 transition duration-300 py-4 text-nowrap"
