--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -1,4 +1,4 @@
-<div class="min-h-screen container-min-w bg-gradient-to-b from-blue-400 to-purple-600">
+<div class="min-h-screen min-w-[640px] mx-auto bg-gradient-to-b from-blue-400 to-purple-600">
   <h3 class="text-2xl font-bold text-center">Professional Experience</h3>
   <div class="container mx-auto px-4 py-8">
     <div *ngIf="experiences && experiences.length > 0">
