--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,5 +1,5 @@
-<div class="container-min-w bg-gradient-to-b from-blue-400 to-purple-600">
-  <h5 class="font-2xl font-bold text-center"> Projects </h5>
+<div class="min-w-[640px] flex flex-col mx-auto align-middle items-center bg-gradient-to-b from-blue-400 to-purple-600">
+  <h3 class="font-2xl font-bold text-center"> Projects </h3>
   <div class="container mx-auto px-4 py-8">
     <div *ngIf="projects && projects.length > 0">
       <div *ngFor="let project of projects" class="bg-white shadow-lg rounded-lg p-6 mb-10">
