--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -1,4 +1,4 @@
-<div class="container-min-w items-center content-center">
+<div class="min-w-[640px] flex flex-col mx-auto align-middle p-12 content-center">
   <h3 class="text-2xl font-bold mb-4 text-gray-800 text-center content-center">
     Skills
   </h3>
