--- a/src/app/why-me/why-me.component.html
+++ b/src/app/why-me/why-me.component.html
@@ -1,4 +1,4 @@
-<div class="flex flex-col items-center">
+<div class="flex flex-col min-w-[640px] mx-auto py-12 items-center">
   <div class="container mx-auto">
     <h3 class="text-2xl font-bold text-nowrap text-center">
       Awards and Recognition
