--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar min-w-full bg-white shadow-lg fixed top-0 w-full z-50">
+<nav class="navbar min-w-full bg-white shadow-lg fixed top-0 w-full z-50 h-[100px]">
   <div class="container mx-auto flex justify-between items-center py-4 px-6">
     <div class="logo text-xl font-bold">Vishal Rana</div>
 
